--- a/app/auth/login/Login.module.css
+++ b/app/auth/login/Login.module.css
@@ -8,7 +8,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  background-color: #dbd5e6;
+  background-color: #c3d4d9;
 }
 
 .buttonContainer {
