--- a/app/about/page.css
+++ b/app/about/page.css
@@ -1,7 +1,7 @@
 .main-about {
   max-width: 100vw;
   text-align: center;
-  background-color: #ece6f7;
+  background-color: #c3d4d9;
   height: 100vh;
 }
 .about-container {
@@ -9,11 +9,11 @@
   margin: 0 auto;
   padding: 20px;
   text-align: center;
-  background-color: #ece6f7;
+  background-color: #c3d4d9;
 }
 
 .about-title {
-  color: #91229a;
+  color: #0b2720;
   font-size: 3rem;
 }
 
@@ -39,7 +39,7 @@
   width: 150px;
   height: 150px;
   border-radius: 50%;
-  background: linear-gradient(#d15a97 100%, #91229a 100%);
+  background: linear-gradient(#246173 100%, #0b2720 100%);
   border-style: solid;
   border-width: 8px;
 
