--- a/components/contact/contact.css
+++ b/components/contact/contact.css
@@ -1,13 +1,13 @@
 .form-container {
   width: 400px;
-  background: linear-gradient(#fadef7, #ffffff) padding-box,
-    linear-gradient(145deg, transparent 35%, #e81cff, #40c9ff) border-box;
+  background: linear-gradient(#e8f5d6, #ffffff) padding-box,
+    linear-gradient(145deg, transparent 35%, #246173, #d5d600) border-box;
   border: 5px solid transparent;
   padding: 32px 24px;
   font-size: 14px;
   direction: rtl;
   font-family: inherit;
-  color: white;
+  color: #333333;
   display: flex;
   flex-direction: column;
   gap: 20px;
@@ -34,45 +34,37 @@
 .form-container .form-group label {
   display: block;
   margin-bottom: 5px;
-  color: #717171;
+  color: #333333;
   font-weight: 600;
   font-size: 12px;
 }
 
-.form-container .form-group input {
-  width: 100%;
-  padding: 12px 16px;
-  border-radius: 27px;
-  color: #717171;
-  font-family: inherit;
-  background-color: transparent;
-  border: 1px solid #414141;
-}
-
+.form-container .form-group input,
 .form-container .form-group textarea {
   width: 100%;
   padding: 12px 16px;
   border-radius: 27px;
-  resize: none;
-  color: #717171;
-  height: 50px;
-  border: 1px solid #414141;
-  background-color: transparent;
+  color: #333333;
   font-family: inherit;
+  background-color: transparent;
+  border: 1px solid #246173;
 }
 
-.form-container .form-group input::placeholder {
+.form-container .form-group textarea {
+  resize: none;
+  height: 50px;
+}
+
+.form-container .form-group input::placeholder,
+.form-container .form-group textarea::placeholder {
   opacity: 0.5;
+  color: #717171;
 }
 
-.form-container .form-group input:focus {
-  outline: none;
-  border-color: #e81cff;
-}
-
+.form-container .form-group input:focus,
 .form-container .form-group textarea:focus {
   outline: none;
-  border-color: #e81cff;
+  border-color: #d5d600;
 }
 
 .form-container .form-submit-btn {
@@ -81,11 +73,11 @@
   justify-content: center;
   align-self: center;
   font-family: inherit;
-  color: #fff;
+  color: #ffffff;
   font-weight: 600;
   width: 40%;
-  background: linear-gradient(#351568, #692ace) padding-box;
-  border: 1px solid #414141;
+  background: linear-gradient(#246173, #0a2620) padding-box;
+  border: 1px solid #246173;
   padding: 12px 16px;
   font-size: inherit;
   gap: 8px;
@@ -96,8 +88,7 @@
 }
 
 .form-container .form-submit-btn:hover {
-  background-color: #ab3999;
-  background: linear-gradient(#330f6e, #5c12d4) padding-box;
-  color: #fff;
+  background: linear-gradient(#1e5160, #051310) padding-box;
+  color: #ffffff;
   transition: 0.3s ease;
 }
