--- a/components/navbar/navbar.css
+++ b/components/navbar/navbar.css
@@ -4,7 +4,7 @@
   /* background-color: black; */
   /* height: var(--nav-height);
   position: relative;
-  border-bottom: 5px solid rgb(143, 0, 0); */
+  border-bottom: 5px solid #0f3849; */
 
   /* position: fixed;
   top: 0;
@@ -31,7 +31,7 @@
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  border-bottom: 5px solid rgb(143, 0, 0);
+  border-bottom: 5px solid #0f3849;
   margin: 15px;
   height: 100%;
 } */
@@ -53,13 +53,13 @@
 } */
 
 /* .link:hover {
-  color: rgb(143, 0, 0);
+  color: #0f3849;
   border-bottom: 5px solid white;
   transition: all 300ms;
 } */
 
 /* .current {
-  color: rgb(143, 0, 0);
+  color: #0f3849;
 } */
 
 /* Styles for screens up to 600px (smartphones) */
