--- a/components/sort-search/sort-search.css
+++ b/components/sort-search/sort-search.css
@@ -4,7 +4,7 @@ div.toolbar {
 
 .toolbar-element {
   border-radius: 10px;
-  border: 5px solid rgb(143, 0, 0);
+  border: 5px solid #0f3849;
   padding: 10px;
   margin: 10px;
   font-size: 15px;
