more fifixes and ddesign

--- a/components/footer/footer.css
+++ b/components/footer/footer.css
@@ -1,5 +1,5 @@
 .footer {
-  background-color: #1a202c;
+  background-color: #044733;
   color: #f7fafc;
   position: fixed;
   /* position: absolute; */
