--- a/components/studentPage/studentPage.css
+++ b/components/studentPage/studentPage.css
@@ -1,4 +1,4 @@
-.students-page {
+/* .students-page {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -79,4 +79,4 @@
     margin-left: 2rem;
     margin-bottom: 0;
   }
-}
+} */
