--- a/components/SchoolClassesGrid/SchoolClassesGrid.css
+++ b/components/SchoolClassesGrid/SchoolClassesGrid.css
@@ -4,7 +4,8 @@
   gap: 30px;
   margin: 30px auto;
   width: 70%;
-  font-family: cursive;
+  font-family: heebo, sans-serif;
+  justify-content: center;
 }
 
 /* .toolbar {
@@ -40,10 +41,11 @@
   cursor: pointer;
   transition: 200ms ease;
   background-color: aliceblue;
+  /* justify-content: center; */
 }
 
 .grid-item:hover {
-  border: 2px solid #0f3849;
+  border: 2px solid rgb#0f3849;
   transition: 200ms ease;
   height: 410px;
 }
@@ -88,6 +90,8 @@
 
 .grid-item p {
   font-size: 15px;
+  direction: rtl;
+  text-align: center;
 }
 
 .read-more {
@@ -102,7 +106,7 @@
   width: 100%;
   height: 40px;
   border-radius: 10px;
-  border: 3px solid #0f3849;
+  border: 3px solid rgb#0f3849;
   padding: 5px;
   margin: 5px;
   font-size: 15px;
@@ -110,6 +114,6 @@
 }
 
 .grid-item button:hover {
-  background-color: #0f3849;
+  background-color: rgb#0f3849;
   transition: 200ms ease;
 }
