--- a/components/studentsGrid/studentsGrid.css
+++ b/components/studentsGrid/studentsGrid.css
@@ -1,10 +1,11 @@
 .grid-container {
+  direction: rtl;
   display: flex;
   flex-direction: column;
   gap: 30px;
   margin: 30px auto;
   width: 70%;
-  font-family: cursive;
+  /* font-family: cursive; */
 }
 
 .read-more {
@@ -37,7 +38,7 @@
 }
 
 .grid-item:hover {
-  border: 2px solid #0f3849;
+  border: 2px solid rgb#0f3849;
   transition: 200ms ease;
   height: 410px;
 }
@@ -80,7 +81,7 @@
   width: 100%;
   height: 40px;
   border-radius: 10px;
-  border: 3px solid #0f3849;
+  border: 3px solid rgb#0f3849;
   padding: 5px;
   margin: 5px;
   font-size: 15px;
@@ -88,6 +89,6 @@
 }
 
 .grid-item button:hover {
-  background-color: #0f3849;
+  background-color: rgb#0f3849;
   transition: 200ms ease;
 }
