--- a/components/StudentDetails/StudentDetails.module.css
+++ b/components/StudentDetails/StudentDetails.module.css
@@ -152,3 +152,73 @@
 .newNoteForm button:hover {
   background-color: #064f3b;
 }
+
+/* personal details */
+.personalDetails {
+  /* max-width: 400px; */
+  /* margin: 20px auto; */
+  padding: 20px;
+  background-color: #ffffff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+}
+
+.title {
+  /* font-size: 24px; */
+  /* color: #333; */
+  /* text-align: center; */
+  /* margin-bottom: 20px; */
+}
+
+.infoSection {
+  display: flex;
+  flex-direction: row;
+  /* gap: 20px; */
+}
+
+.infoItem {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.icon {
+  font-size: 20px;
+}
+
+.personalDetails h3 {
+  /* font-size: 18px; */
+  color: #444;
+  margin-bottom: 10px;
+}
+
+.parentsInfo {
+  /* background-color: #f8f8f8; */
+  padding: 15px;
+  border-radius: 6px;
+}
+
+.parentCard {
+  /* background-color: #ffffff; */
+  padding: 10px;
+  border-radius: 4px;
+  margin-bottom: 10px;
+}
+
+.parentItem {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin-bottom: 5px;
+}
+
+.addressInfo {
+  /* background-color: #f8f8f8; */
+  padding: 15px;
+  border-radius: 6px;
+}
+
+/* .personalDetails p {
+  margin: 0;
+  color: #666;
+} */
