--- a/components/StudentDetails/StudentDetails.module.css
+++ b/components/StudentDetails/StudentDetails.module.css
@@ -159,8 +159,8 @@
   /* margin: 20px auto; */
   padding: 20px;
   background-color: #ffffff;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  border-radius: 8px;
+  /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  border-radius: 8px; */
 }
 
 .title {
