--- a/components/SchoolClassesGrid/SchoolClassesGrid.module.css
+++ b/components/SchoolClassesGrid/SchoolClassesGrid.module.css
@@ -1,35 +1,22 @@
-.grid-container {
+/* @import url("https://fonts.googleapis.com/css2?family=Heebo:wght@400;700&display=swap"); */
+
+.gridContainer {
   display: flex;
   flex-direction: column;
   gap: 30px;
   margin: 30px auto;
   width: 70%;
-  font-family: heebo, sans-serif;
+  font-family: "Heebo", Arial, sans-serif;
   justify-content: center;
 }
-
-/* .toolbar {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-} */
-
-/* .grid-container input {
-  height: 50px;
-  border-radius: 25px;
-  padding: 0 25px;
-} */
 
 .grid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-
   gap: 30px;
 }
 
-.grid-item {
+.gridItem {
   text-decoration: none;
   color: black;
   display: flex;
@@ -39,62 +26,47 @@
   border: 1.5px solid #0f3849;
   border-radius: 25px;
   cursor: pointer;
-  transition: 200ms ease;
+  transition: all 200ms ease;
   background-color: aliceblue;
-  /* justify-content: center; */
+  /* width: 100%; */
 }
 
-.grid-item:hover {
-  border: 2px solid rgb#0f3849;
-  transition: 200ms ease;
+.gridItem:hover {
+  border: 2px solid #0f3849;
   height: 410px;
+  /* width: 105%; */
+  transition: all 200ms ease;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-.grid-item img {
+.gridItem img {
   margin: 0 0 15px 0;
   padding: 0 0 15px 0;
   height: 100%;
   width: 100%;
   object-fit: contain;
   transition: 200ms ease;
-  /* border-radius: 10% 10% 0 0; */
 }
 
-/* grid-item img {
-  height: 3vh;
-  width: 3vh;
-  -o-object-fit: contain;
-  object-fit: contain;
+.gridItem img:hover {
   transition: 200ms ease;
-  border-radius: 40%;
+  transform: rotate(2deg);
 }
 
-@media screen and (max-width: 600px) {
-  grid-item img {
-    height: 2vh;
-    width: 2vh;
-  }
-} */
-
-.grid-item img:hover {
-  transition: 200ms ease;
-  transform: rotate(3deg);
-}
-
-.grid-item h2 {
+.gridItem h2 {
   font-size: 20px;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.grid-item p {
+.gridItem p {
   font-size: 15px;
   direction: rtl;
   text-align: center;
 }
 
-.read-more {
+.readMore {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -102,18 +74,35 @@
   width: 100%;
 }
 
-.grid-item button {
+.gridItem button {
+  /* width: 100%;
+  height: 40px;
+  border-radius: 10px;
+  border: 3px solid #0f3849;
+  padding: 5px;
+  margin: 5px;
+  font-size: 15px;
+  cursor: pointer; */
+
   width: 100%;
   height: 40px;
   border-radius: 10px;
-  border: 3px solid rgb#0f3849;
+  border: 3px solid rgb #0f3849;
   padding: 5px;
   margin: 5px;
   font-size: 15px;
   cursor: pointer;
+  font-family: heebo, san sarif;
 }
 
-.grid-item button:hover {
-  background-color: rgb#0f3849;
+.gridItem button:hover {
+  background-color: #0f3849;
+  color: aliceblue;
   transition: 200ms ease;
+}
+
+.loading {
+  text-align: center;
+  font-size: 18px;
+  padding: 20px;
 }
