--- a/components/StudentDetails/StudentDetails.module.css
+++ b/components/StudentDetails/StudentDetails.module.css
@@ -222,3 +222,111 @@
   margin: 0;
   color: #666;
 } */
+
+/* deleting student */
+/* הוספת מרווח לכפתור המחיקה */
+.deleteButton {
+  background-color: #ff4d4f;
+  color: white;
+  /* border: none; */
+  border-color: #d9363e;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 1rem;
+  font-family: "Heebo", sans-serif;
+  transition: 0.3s ease;
+  margin-right: 10px; /* הוספת מרווח מימין */
+}
+
+.deleteButton:hover {
+  background-color: #d9363e;
+  box-shadow: 0px 4px rgba(0, 0, 0, 0.25);
+}
+
+.modalOverlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.modalContent {
+  background-color: white;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  max-width: 500px;
+  width: 90%;
+  font-family: "Heebo", sans-serif;
+  direction: rtl;
+}
+
+.modalTitle {
+  font-size: 1.5rem;
+  margin-bottom: 10px;
+  color: #333;
+}
+
+.modalDescription {
+  font-size: 1rem;
+  margin-bottom: 20px;
+  color: #666;
+}
+
+.modalButtons {
+  display: flex;
+  justify-content: center; /* מרכוז הכפתורים */
+  gap: 10px;
+}
+
+.cancelButton,
+.confirmButton {
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 1rem;
+  font-family: "Heebo", sans-serif;
+  transition: 0.3s ease;
+}
+
+.cancelButton {
+  background-color: #f0f0f0;
+  color: #333;
+  border: 1px solid #064f3b;
+}
+
+.cancelButton:hover {
+  background-color: #0c8464; /* שינוי צבע הרקע בהובר */
+  color: white; /* שינוי צבע הטקסט בהובר */
+  box-shadow: 0px 4px rgba(0, 0, 0, 0.25);
+}
+
+.confirmButton {
+  background-color: #ff4d4f;
+  color: white;
+}
+
+.confirmButton:hover {
+  background-color: #d9363e; /* צבע אדום עמוק יותר בהובר */
+  box-shadow: 0px 4px rgba(0, 0, 0, 0.25);
+}
+
+.confirmButton:disabled {
+  background-color: #ffcccb;
+  cursor: not-allowed;
+  box-shadow: none;
+}
+
+.errorMessage {
+  color: #ff4d4f;
+  margin-top: 10px;
+  font-size: 0.9rem;
+}
