--- a/components/addStudents/AddStudentForm.module.css
+++ b/components/addStudents/AddStudentForm.module.css
@@ -57,7 +57,7 @@
 .submitButton {
   width: 100%;
   height: 44px;
-  background: linear-gradient(341deg, #246173 0%, #0a2620 100%);
+  background: linear-gradient(#246173, #0a2620) padding-box;
   box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.2);
   border-radius: 35px;
   color: white;
@@ -68,6 +68,12 @@
   border: none;
   cursor: pointer;
   margin-top: 20px;
+}
+
+.submitButton:hover {
+  background: linear-gradient(#1e5160, #051310) padding-box;
+  color: #ffffff;
+  transition: 0.3s ease;
 }
 
 @media (max-width: 768px) {
