--- a/components/dashboard/dashboard.css
+++ b/components/dashboard/dashboard.css
@@ -48,6 +48,33 @@ body,
   transform-origin: top left;
 }
 
+@media (max-width: 768px) {
+  .dashboard-container {
+    right: 0;
+    width: 100%;
+    padding: 10px;
+    padding-right: 60px;
+    overflow: none;
+    /* height: auto; */
+  }
+
+  .dashboard-wrapper {
+    transform: none !important;
+    /* overflow: auto; */
+    overflow: hidden;
+  }
+
+  .dashboard {
+    width: 100%;
+    height: 100vh;
+    aspect-ratio: 1366 / 768;
+    max-width: 100vw;
+    max-height: 100vh;
+
+    /* max-height: calc(100vh - 20px); */
+  }
+}
+
 /* body.sidebar-open .dashboard-container {
   right: var(--sidebar-width-open);
   width: calc(100% - var(--sidebar-width-open));
