--- a/app/globals.css
+++ b/app/globals.css
@@ -93,18 +93,14 @@
   /* min-height: 100vh; */
 }
 
-.content-container {
-  grid-column: 2;
-  grid-row: 1;
-  /* overflow-y: auto; */
-}
-
 footer {
   grid-column: 2;
   grid-row: 2;
 }
 
 .content-container {
+  grid-column: 2;
+  grid-row: 1;
   margin-right: var(--sidebar-width-closed);
   transition: 0.3s ease;
   width: calc(100% - var(--sidebar-width-closed));
@@ -121,7 +117,6 @@ body.sidebar-open .content-container {
 html,
 body {
   max-width: 100vw;
-
   max-height: 100vh;
   /* overflow-x: hidden; */
 }
@@ -132,12 +127,15 @@ body {
   transition: padding-right 0.3s ease;
   color: rgb(var(--foreground-rgb));
   background-color: #c3d4d9;
+  /* padding-right: var(--sidebar-width-closed); */
   /* background: linear-gradient(
       to bottom,
       transparent,
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb)); */
+  /* right: var(--sidebar-width-closed);
+  width: calc(100% - var(--sidebar-width-closed)); */
 }
 
 a {
