--- a/app/auth/login/Login.module.css
+++ b/app/auth/login/Login.module.css
@@ -30,8 +30,10 @@
 
 .title {
   font-family: var(--font-mono);
-  font-size: 17px;
+  font-size: 15px;
   margin-bottom: 15px;
+  margin-right: 15px;
+  /* direction: rtl; */
 }
 
 .button {
