--- a/components/EvaluationForm/EvaluationForm.module.css
+++ b/components/EvaluationForm/EvaluationForm.module.css
@@ -27,7 +27,7 @@
 
 .inputGroup label,
 .checkboxGroup label {
-  color: #333333;
+  /* color: #333333; */
   font-size: 16px;
   font-family: "Heebo", sans-serif;
   line-height: 24px;
@@ -101,18 +101,72 @@
   border-radius: 5px;
   margin-bottom: 20px;
 }
-/* 
-.radioSelectorContainer {
+
+.formRow {
+  display: flex;
+  gap: 20px;
+  margin-bottom: 15px;
+}
+
+.formRow .inputGroup {
+  flex: 1;
+}
+
+.inputGroup {
+  display: flex;
+  flex-direction: column;
+}
+
+.inputGroup label {
+  margin-bottom: 5px;
+}
+
+.inputGroup input,
+.inputGroup select {
+  width: 100%;
+  height: 40px;
+  border-radius: 27px;
+  border: 1px solid #246173;
+  padding: 8px 16px;
+  font-size: 14px;
+  font-family: "Heebo", sans-serif;
+  background-color: white;
+}
+
+.personalInfoContainer {
+  display: flex;
+  gap: 20px;
+  margin-bottom: 20px;
+}
+
+.studentImage {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  overflow: hidden;
+  flex-shrink: 0;
+  background-color: #f0f0f0; /* רקע אפור בהיר למקרה שאין תמונה */
   display: flex;
   justify-content: center;
+  align-items: center;
+}
+
+.studentImage img {
   width: 100%;
-} */
+  height: 100%;
+  object-fit: cover;
+}
 
-/* .questionGroup {
-  margin-bottom: 20px;
-} */
+.personalInfoFields {
+  flex-grow: 1;
+}
 
-/* .questionGroup h3 {
-  margin-bottom: 10px;
-  font-weight: bold;
-} */
+.evaluatorInfo {
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+}
+
+.evaluatorInfo .inputGroup {
+  flex: 1;
+}
