--- a/components/radioSelector/RadioSelector.css
+++ b/components/radioSelector/RadioSelector.css
@@ -1,11 +1,11 @@
 .radio-input {
-  --container_width: 300px;
+  --container_width: 65vw;
   position: relative;
   display: flex;
   align-items: center;
   border-radius: 9999px;
   background-color: #fff;
-  color: #000000;
+  /* color: #246173; */
   width: var(--container_width);
   overflow: hidden;
   border: 1px solid rgba(53, 52, 52, 0.226);
@@ -23,24 +23,26 @@
   font-weight: 600;
   letter-spacing: -1px;
   font-size: 14px;
+  /* color: #246173; */
 }
 
 .selection {
   display: inline-block;
   position: absolute;
   height: 100%;
-  width: calc(var(--container_width) / 5);
+  width: calc(var(--container_width) / 7);
   z-index: 0;
   left: 0;
   top: 0;
   transition: 0.15s ease;
   background-color: #246173;
+  color: #ffffff !important;
 }
 
 .radio-input input {
   display: none;
 }
 
-.radio-input input:checked + span {
+.radio-input input:checked + label span {
   color: #ffffff;
 }
