class list added and css fixes

--- a/components/SchoolClassesGrid/SchoolClassesGrid.module.css
+++ b/components/SchoolClassesGrid/SchoolClassesGrid.module.css
@@ -16,9 +16,9 @@
 /* Grid layout */
 .grid {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  grid-template-columns: repeat(3, 1fr);
   gap: 20px;
-  direction: rtl; /* Added direction: rtl; */
+  direction: rtl;
 }
 
 /* Individual grid item styles */
@@ -161,7 +161,7 @@
 
   .gridItem {
     width: 60%; /* Reduce width by 40% */
-    height: 600px; /* Doubled height */
+    height: 350px; /* Doubled height */
     padding: 12px;
     margin: 0 auto; /* Center the item */
     display: flex;
