--- a/components/EvaluationForm/EvaluationForm.module.css
+++ b/components/EvaluationForm/EvaluationForm.module.css
@@ -170,3 +170,63 @@
 .evaluatorInfo .inputGroup {
   flex: 1;
 }
+
+@media (max-width: 1200px) {
+  .form {
+    padding-right: 40px;
+  }
+
+  .formRow {
+    flex-direction: column;
+    gap: 15px;
+  }
+
+  .personalInfoContainer {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .studentImage {
+    margin-bottom: 15px;
+  }
+
+  .evaluatorInfo {
+    flex-direction: column;
+  }
+}
+
+@media (max-width: 768px) {
+  .form {
+    /* padding-right: 20px; */
+  }
+
+  .inputGroup input,
+  .inputGroup textarea,
+  .inputGroup select {
+    font-size: 16px;
+  }
+
+  .submitButton {
+    font-size: 18px;
+  }
+}
+
+@media (max-width: 480px) {
+  .form {
+    padding-right: 45px;
+  }
+
+  .formSection {
+    padding: 15px;
+  }
+
+  .inputGroup label,
+  .checkboxGroup label {
+    font-size: 14px;
+  }
+
+  .submitButton {
+    font-size: 16px;
+    height: 40px;
+  }
+}
