--- a/components/footer/footer.css
+++ b/components/footer/footer.css
@@ -12,13 +12,13 @@
 }
 
 .footer-container {
-  max-width: 1200px;
+  width: 100%;
   margin: 0 auto;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  padding: 0.5rem 1rem;
+  padding: 0.5rem 2rem;
 }
 
 .footer-menu {
